# rotors_exercise

./: CMakeLists.txt  package.xml
cfg/: Controller.cfg
launch/: mav_exercise1.launch  mav_exercise2.launch  mav_exercise4.launch  mav_gazebo_attitude_controller.launch  mav_gazebo_position_controller.launch
resource/: example_waypoints_powerplant.txt  exercise1.txt  exercise2.txt  lee_controller_firefly_soft.yaml
src/: control.cpp  estimator.cpp  estimator.h  path_node.cpp  path_node.h
urdf/: firefly_fake_gps_sensor.gazebo  firefly_fake_gps_sensor_with_wind_gust.gazebo
